# git-cmake

./: CMakeLists.txt  README.md  main.c  version.h.in
cmake/: GetGitRevisionDescription.cmake
